<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_VAC_GEN_CONF" Id="{c1a180cb-4fc4-49c1-84c6-526c4679f1c0}">
    <Declaration><![CDATA[TYPE TYP_VAC_GEN_CONF :
STRUCT
	Permanent : BOOL := TRUE; // Holds output even after reaching vacuum
	Alarm : TYP_VAC_GEN_ALARM_CONF;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>