<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_VAC_GEN_CTRL" Id="{73639abf-238a-496c-8650-3dd61e75c031}">
    <Declaration><![CDATA[TYPE TYP_VAC_GEN_CTRL :
STRUCT
	Enable : BOOL := TRUE; // Enable vacuum gen control
	EnableActivate : BOOL := TRUE; // Enable vacuum activation
	EnableRelease : BOOL := TRUE; // Enable release activation
	ServiceEnable : BOOL;
	ServiceActivate : BOOL;
	ServiceRelease : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>