<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="TYP_VAC_GEN_STATUS" Id="{fdc067a5-56ba-4315-8a98-a68e8afb0f73}">
    <Declaration><![CDATA[TYPE TYP_VAC_GEN_STATUS :
STRUCT
	ReachedVac : BOOL;
	Error : BOOL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>